--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ BenchmarkDotNet.Artifacts/
 # .NET Core
 project.lock.json
 project.fragment.lock.json
-artifacts/
+# artifacts/
 
 # StyleCop
 StyleCopReport.xml
