Add notification hub

--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
@@ -36,7 +36,9 @@
         <None Remove="Assets\parcel.svg" />
         <None Remove="Assets\success.png" />
         <None Remove="Assets\warning.png" />
+        <None Remove="Controls\NotificationIcon.xaml" />
         <None Remove="Pages\GettingStarted.xaml" />
+        <None Remove="Pages\NotificationHub.xaml" />
     </ItemGroup>
 
     <ItemGroup>
@@ -46,7 +48,6 @@
         </PackageReference>
         <PackageReference Include="Community.Sextant.WinUI" Version="0.5.0" />
         <PackageReference Include="Community.Sextant.WinUI.Microsoft.Extensions.DependencyInjection" Version="0.5.0" />
-        <PackageReference Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.0" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
@@ -72,9 +73,24 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Page Update="Controls\NotificationIcon.xaml">
+            <Generator>MSBuild:Compile</Generator>
+        </Page>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Page Update="Pages\NotificationHub.xaml">
+            <Generator>MSBuild:Compile</Generator>
+        </Page>
+    </ItemGroup>
+
+    <ItemGroup>
         <Page Update="Pages\GettingStarted.xaml">
             <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
             <SubType>Designer</SubType>
+        </Page>
+        <Page Update="Themes\Generic.xaml">
+            <Generator>MSBuild:Compile</Generator>
         </Page>
     </ItemGroup>
 </Project>
