--- a/PackageInstaller.Core.Services.Tests/PackageInstaller.Core.Services.Tests.csproj
+++ b/PackageInstaller.Core.Services.Tests/PackageInstaller.Core.Services.Tests.csproj
@@ -7,6 +7,7 @@
         <RuntimeIdentifiers>win-x86;win-x64;win-arm64</RuntimeIdentifiers>
     </PropertyGroup>
     <ItemGroup>
+        <PackageReference Include="FakeItEasy" Version="7.3.1" />
         <PackageReference Include="FluentAssertions" Version="6.7.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
         <PackageReference Include="NUnit" Version="3.13.3" />
