--- a/PackageInstaller.Core.Services/PackageInstaller.Core.Services.csproj
+++ b/PackageInstaller.Core.Services/PackageInstaller.Core.Services.csproj
@@ -18,7 +18,7 @@
         <PackageReference Include="Community.Archives.Rpm" Version="1.2.0" />
         <PackageReference Include="Community.Archives.Tar" Version="1.2.0" />
         <PackageReference Include="Community.Wsa.Sdk" Version="1.1.0-rc4" />
-        <PackageReference Include="Community.Wsl.Sdk" Version="2.0.2" />
+        <PackageReference Include="Community.Wsl.Sdk" Version="3.0.0-alpha2" />
         <PackageReference Include="System.Memory" Version="4.5.5" />
     </ItemGroup>
 
