--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
@@ -49,7 +49,7 @@
         <PackageReference Include="Community.Sextant.WinUI" Version="0.5.0" />
         <PackageReference Include="Community.Sextant.WinUI.Microsoft.Extensions.DependencyInjection" Version="0.5.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.0" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.1" />
         <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.197" />
         <PackageReference Include="ReactiveUI" Version="18.0.10" />
         <PackageReference Include="ReactiveUI.WinUI" Version="18.0.10" />
@@ -67,7 +67,9 @@
     <ItemGroup>
         <ProjectReference Include="..\NativeInterop.Win32.Xaml\NativeInterop.Win32.Xaml.csproj" />
         <ProjectReference Include="..\NativeInterop.Win32\NativeInterop.Win32.csproj" />
-        <ProjectReference Include="..\PackageInstaller.Core.Services.WinUI\PackageInstaller.Core.Services.WinUI.csproj" />
+        <ProjectReference
+            Include="..\PackageInstaller.Core.Services.WinUI\PackageInstaller.Core.Services.WinUI.csproj"
+        />
         <ProjectReference Include="..\PackageInstaller.Core.Services\PackageInstaller.Core.Services.csproj" />
         <ProjectReference Include="..\PackageInstaller.Core\PackageInstaller.Core.csproj" />
     </ItemGroup>
