Fix ignored files & names

--- a/PackageInstaller/PackageInstaller.csproj
+++ b/PackageInstaller/PackageInstaller.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net6.0-windows10.0.20348.0</TargetFramework>
@@ -15,14 +15,6 @@
         <EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
         <PublishProfile>Properties\PublishProfiles\win10-$(Platform).pubxml</PublishProfile>
     </PropertyGroup>
-    <ItemGroup>
-        <Compile Remove="Properties\**" />
-        <Content Remove="Properties\**" />
-        <EmbeddedResource Remove="Properties\**" />
-        <None Remove="Properties\**" />
-        <Page Remove="Properties\**" />
-        <PRIResource Remove="Properties\**" />
-    </ItemGroup>
     <ItemGroup>
         <Content Remove="Assets\DistroIcons\README.md" />
     </ItemGroup>
