--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,23 @@ on:
       - main
   workflow_call:
 
+name: Validate PRs and Main branch
+
 jobs:
-  build:
+  check_formatting:
+    runs-on: ubuntu-latest
+    name: Check Formatting
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          dotnet tool restore
+          dotnet csharpier --check
+
+  execute_tests:
     runs-on: windows-2022
+    strategy:
+      matrix:
+        platform: ["x86", "x64", "arm64"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -26,6 +40,6 @@ jobs:
       - name: Setup VSTest Path
         uses: darenm/Setup-VSTest@v1
       - name: Build
-        run: msbuild /t:build /restore /p:Configuration=Release /p:Platform=x64 /p:Platform=x86 /p:Platform=arm64 /p:AppxPackage=false /m Winstrumenta.sln
+        run: msbuild /m /t:build /restore /p:Configuration=Release /p:Platform=${{ matrix.platform }} /p:AppxPackage=false /m Winstrumenta.sln
       - name: Test
         run: Get-ChildItem -Recurse -Filter "*.Tests.dll" | ? { $_.FullName -Match "bin.[^.]+.Release" -and $_.FullName -notmatch "ref" } | % { vstest.console.exe $_.FullName }
